--- a/package.json
+++ b/package.json
@@ -1,60 +1,75 @@
 {
   "name": "chrome-extension-giphy",
   "description": "Personal and new GIF every time you open a new tab.",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack/webpack.config.development",
     "build": "webpack --config ./webpack/webpack.config.production",
     "serve": "serve -l 1337 -c ./serve.json",
-    "eslint": "eslint src --ext .ts --ext .tsx"
+    "prettier:report": "prettier '**/*.{js,tsx,ts}' --check",
+    "prettier:fix": "prettier '**/*.{js,tsx,ts}' --write",
+    "eslint:report": "eslint '**/*.{js,tsx,ts}'",
+    "eslint:fix": "eslint '**/*.{js,tsx,ts}' --fix",
+    "stylelint:report": "stylelint '**/*.scss'",
+    "stylelint:fix": "stylelint '**/*.scss' --fix"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
-    "@typescript-eslint/eslint-plugin": "^2.21.0",
-    "@typescript-eslint/parser": "^2.21.0",
-    "chalk": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
+    "babel-eslint": "^10.1.0",
+    "chalk": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
-    "dotenv-webpack": "^1.7.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-airbnb-typescript": "^7.0.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "file-loader": "^5.1.0",
-    "html-webpack-plugin": "^3.2.0",
+    "copy-webpack-plugin": "^6.2.0",
+    "css-loader": "^4.3.0",
+    "dotenv-webpack": "^3.0.0",
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-airbnb-typescript": "^11.0.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.3",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "file-loader": "^6.1.0",
+    "html-webpack-plugin": "^4.5.0",
     "ip": "^1.1.5",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "^0.12.0",
     "node-sass": "^4.13.1",
+    "prettier": "^2.1.2",
     "resource-hints-webpack-plugin": "^0.0.2",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^10.0.2",
     "serve": "^11.3.0",
     "style-loader": "^1.1.3",
+    "stylelint": "^13.7.2",
+    "stylelint-config-sass-guidelines": "^7.1.0",
     "svg-react-loader": "^0.4.6",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.8.2",
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^5.2.0"
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-observable": "^1.2.0",
     "redux-persist": "^6.0.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "rxjs": "^6.6.3"
   }
 }
