--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "start": "webpack-dev-server --config ./webpack/webpack.config.development",
     "build": "webpack --config ./webpack/webpack.config.production",
     "serve": "serve -l 1337 -c ./serve.json",
-    "prettier:report": "prettier '**/*.{js,tsx,ts}' --check",
-    "prettier:fix": "prettier '**/*.{js,tsx,ts}' --write",
+    "prettier:report": "prettier '**/*.{js,tsx,ts,scss,json,md}' --check",
+    "prettier:fix": "prettier '**/*.{js,tsx,ts,scss,json,md}' --write",
     "eslint:report": "eslint '**/*.{js,tsx,ts}'",
     "eslint:fix": "eslint '**/*.{js,tsx,ts}' --fix",
     "stylelint:report": "stylelint '**/*.scss'",
-    "stylelint:fix": "stylelint '**/*.scss' --fix"
+    "stylelint:fix": "stylelint '**/*.scss' --fix",
+    "typescript:report": "tsc --noEmit"
   },
   "devDependencies": {
+    "@gunnarx2/eslint-config-eslint-react": "^4.0.3",
+    "@gunnarx2/prettier": "^4.0.3",
+    "@gunnarx2/stylelint": "^4.1.1",
     "@types/classnames": "^2.2.10",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
@@ -30,11 +34,11 @@
     "dotenv-webpack": "^3.0.0",
     "eslint": "^7.10.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-airbnb-typescript": "^11.0.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
@@ -43,16 +47,20 @@
     "eslint-plugin-react-hooks": "^4.1.2",
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
+    "husky": "^4.3.6",
     "ip": "^1.1.5",
     "mini-css-extract-plugin": "^0.12.0",
     "node-sass": "^4.13.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
     "resource-hints-webpack-plugin": "^0.0.2",
     "sass-loader": "^10.0.2",
     "serve": "^11.3.0",
     "style-loader": "^1.1.3",
     "stylelint": "^13.7.2",
+    "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-sass-guidelines": "^7.1.0",
+    "stylelint-prettier": "^1.1.2",
     "svg-react-loader": "^0.4.6",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
