--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,9 @@
     "baseUrl": "src",
     "outDir": "dist",
     "target": "es6",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "paths": {
-      "redux": [
-        "node_modules/redux"
-      ]
+      "redux": ["node_modules/redux"]
     },
     "allowJs": true,
     "skipLibCheck": true,
@@ -25,11 +19,6 @@
     "isolatedModules": true,
     "jsx": "react"
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
